--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,11 +5,11 @@ on:
       - main
 
 env:
-  AWS_ACCESS_KEY_ID: ${{ secrets. }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets. }}
-  TF_STATE_BUCKET_NAME: ${{ secrets. }}
-  PRIVATE_SSH_KEY: ${{ secrets. }}
-  PUBLIC_SSH_KEY: ${{ secrets. }}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  TF_STATE_BUCKET_NAME: ${{ secrets.TF_STATE_BUCKET_NAME }}
+  PRIVATE_SSH_KEY: ${{ secrets.PRIVATE_SSH_KEY }}
+  PUBLIC_SSH_KEY: ${{ secrets.PUBLIC_SSH_KEY }}
   AWS_REGION: us-east-1
 
 jobs:
@@ -18,7 +18,25 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-# Continue where you left off 
-# Complete CI/CD with Terraform and AWS | Terraform Tutorial | DevOps Project | AWS | Cloud-Native - YouTube
-# 23:37
+      - name: Setup Terraform
+        uses: hasicorp/setup-terraform@v1
+        with: 
+          terraform_wrapper: false
+      - name: Terraform init
+        id: init
+        run: terraform init -backend-config="bucket=$TF_STATE_BUCKET_NAME" -backend-config="region=us-east-1"
+        working-directory: ./terraform
+      - name: Terraform plan
+        id: plan
+        run: |-
+          terraform plan \
+          -var="region=$AWS_REGION" \
+          -var="public_key=$PUBLIC_SSH_KEY" \
+          -var="private_key=$PRIVATE_SSH_KEY" \
+          -var="key_name=deployer-key" \
+          -out=PLAN
+        working-directory: ./terraform
+      - name: Terraform apply
+        id: apply
+        run: terraform apply PLAN
+        working-directory: ./terraform
