--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -51,6 +51,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
+          path: ${{ github.workspace }}/web/
           node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
       - name: Setup Pages
